# asterbot

./: .gitignore  LICENSE  README.md
components/: package.wasm  tool-hook.wit  types.wit
components/agent/: Cargo.toml  component.wit
components/agent/src/: bindings.rs  lib.rs
components/core/: Cargo.toml  component.wit
components/core/src/: bindings.rs  lib.rs
components/discord-gateway/: Cargo.toml  component.wit
components/discord-gateway/src/: lib.rs
components/history/: Cargo.toml  README.md  component.wit
components/history/src/: lib.rs
components/interface/: component.wit
components/memory/: Cargo.toml  component.wit
components/memory/src/: bindings.rs  lib.rs
components/self/: Cargo.toml  component.wit
components/self/src/: lib.rs
components/skills/: Cargo.toml  component.wit
components/skills/src/: bindings.rs  lib.rs
components/soul/: Cargo.toml  component.wit
components/soul/src/: bindings.rs  lib.rs
components/telegram-gateway/: Cargo.toml  README.md  component.wit
components/telegram-gateway/src/: lib.rs
components/tool-gate/: Cargo.toml  README.md  component.wit
components/tool-gate/src/: lib.rs
components/toolkit/: Cargo.toml  component.wit
components/toolkit/src/: bindings.rs  lib.rs
components/twilio-gateway/: Cargo.toml  component.wit
components/twilio-gateway/src/: lib.rs
components/whatsapp-gateway/: Cargo.toml  README.md  component.wit
components/whatsapp-gateway/src/: lib.rs
