[package]
name = "asterbot-self"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen = "0.52.0"
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
