[package]
name = "asterbot-self"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "asterbot:agent"

[package.metadata.component.dependencies]
