[package]
name = "asterbot-tool-gate"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen = "0.52.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
sha2 = "0.10"
uuid = { version = "1", features = ["v7"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
